add heroku deployment
1. change Dockerfile for heroku requirements
2. replace docker plugin
3. add heroku deploument sh script
4. update travis configuration
5. change docker debug files