@@ -1,7 +1,6 @@
 FROM openjdk:8-jdk-alpine
-ENV JAVA_TOOL_OPTIONS -XX:+UseG1GC -Xms1g -Xmx1g -Dfile.encoding=UTF-8 -Djava.security.egd=file:/dev/./urandom
-VOLUME /tmp
+ENV JAVA_TOOL_OPTIONS -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Dfile.encoding=UTF-8 -Djava.security.egd=file:/dev/./urandom
+ENV PORT ${PORT}
 ARG JAR_FILE
 ADD ${JAR_FILE} app.jar
-EXPOSE 8080
-ENTRYPOINT ["java","-jar","/app.jar"]
+CMD ["java","-jar","/app.jar"]
